--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,11 @@
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-rest-hal-explorer</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-rest</artifactId>
 
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -60,7 +64,8 @@
 		<repository>
 			<id>internal.repo</id>
 			<name>Github Repo</name>
-			<url>https://github.com/beanpot99/rewardsTrackerMaven</url>
+			<url>file://${user.home}/.m2/repository
+			</url>
 		</repository>
 	</distributionManagement>
 
@@ -86,6 +91,19 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-deploy-plugin</artifactId>
+
+			</plugin>
+			<plugin>
+				<groupId>com.github.eirslett</groupId>
+				<artifactId>frontend-plugins</artifactId>
+				<version>1.12.1</version>
+				<configuration>
+					<installDirectory>target</installDirectory>
 				</configuration>
 			</plugin>
 		</plugins>
